# zelos-opal

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  config.schema.json  extension.toml  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  release.yml
scripts/: bump_version.py  package_extension.py
tests/: test_extension.py
zelos_opal/: __init__.py  actions.py  bridge.py  constants.py  extension.py
